--- a/Products/XPipe/V1/xpipe-v1-web-portal/src/app/code/Pipe/Dashboard/view/adminhtml/templates/individual.phtml
+++ b/Products/XPipe/V1/xpipe-v1-web-portal/src/app/code/Pipe/Dashboard/view/adminhtml/templates/individual.phtml
@@ -1,7 +1,64 @@
 <?php
 /** @var \Magento\Backend\Block\Template $block */
+$dashboardDemo = "http://localhost:5007/d/cd3badb8-3be1-4edc-be6c-9c1188dd6ad8/individual-dash?orgId=1&from=2025-06-26T08:01:16.190Z&to=2025-06-26T14:01:16.190Z&timezone=browser&viewPanel=panel-1"
+
 ?>
 <section class="custom-dashboard">
     <h1>Welcome to XPipe Individual Dashboard</h1>
     <p>XPipe custom dashboard layout</p>
+
+<!--    <iframe src="http://localhost:5007/d-solo/cd3badb8-3be1-4edc-be6c-9c1188dd6ad8/individual-dash?orgId=1&from=1750924876190&to=1750946476190&timezone=browser&panelId=1&__feature.dashboardSceneSolo" width="450" height="200" frameborder="0"></iframe>-->
+
+    <!-- 1:1 aspect ratio -->
+    <div class="embed-responsive embed-responsive-21by9">
+        <iframe class="embed-responsive-item" frameborder="0" src="<?= $dashboardDemo ?>"></iframe>
+    </div>
+
 </section>
+
+
+<style>
+
+    /* Embed - bootstrap classes */
+
+    .embed-responsive {
+        position: relative;
+        display: block;
+        width: 100%;
+        padding: 0;
+        overflow: hidden;
+    }
+    .embed-responsive::before {
+        display: block;
+        content: "";
+    }
+    .embed-responsive .embed-responsive-item,
+    .embed-responsive iframe,
+    .embed-responsive embed,
+    .embed-responsive object,
+    .embed-responsive video {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border: 0;
+    }
+
+    .embed-responsive-21by9::before {
+        padding-top: 42.85714286%;
+    }
+
+
+
+
+    .form-container {
+        display: none !important;
+    }
+
+    label {
+        display: inline-block;
+        margin-bottom: 0.0rem;
+    }
+</style>
