--- a/Products/XPipe/V1/xpipe-v1-web-portal/src/app/code/Pipe/Dashboard/view/adminhtml/templates/superadmin.phtml
+++ b/Products/XPipe/V1/xpipe-v1-web-portal/src/app/code/Pipe/Dashboard/view/adminhtml/templates/superadmin.phtml
@@ -1,20 +1,21 @@
 <?php
 /** @var \Magento\Backend\Block\Template $block */
 
-$dashboardDemo = "http://localhost:5006/public/dashboard/478697f0-a9a6-4b94-a768-aa8597e354e6"
-?>
-<section class="custom-dashboard">
-    <h1>Welcome to XPipe Superadmin Dashboard</h1>
-    <p>XPipe custom dashboard layout</p>
+// Grafana
+//$dashboardDemo = "http://localhost:5007/public-dashboards/178a94bbe8b24449bce77a8d04d39edb";
 
-    <!-- 1:1 aspect ratio -->
-    <div class="embed-responsive embed-responsive-21by9">
-        <iframe class="embed-responsive-item" frameborder="0" src="<?= $dashboardDemo ?>"></iframe>
-    </div>
-</section>
+// Metabase
+$dashboardDemo = "http://localhost:5006/public/dashboard/f7925f52-9537-4141-9004-d39b87787649";
+?>
+
+<!-- 1:1 aspect ratio -->
+<div class="embed-responsive embed-responsive-21by9">
+    <iframe class="embed-responsive-item" frameborder="0" src="<?= $dashboardDemo ?>"></iframe>
+</div>
+
+
 
 <style>
-
     /* Embed - bootstrap classes */
 
     .embed-responsive {
@@ -45,8 +46,6 @@ $dashboardDemo = "http://localhost:5006/public/dashboard/478697f0-a9a6-4b94-a768
     .embed-responsive-21by9::before {
         padding-top: 42.85714286%;
     }
-
-
 
 
     .form-container {
