Test AMQP protocol module

--- a/Products/XPipe/V1/xpipe-v1-web-portal/src/app/code/Pipe/Dashboard/view/adminhtml/templates/superadmin.phtml
+++ b/Products/XPipe/V1/xpipe-v1-web-portal/src/app/code/Pipe/Dashboard/view/adminhtml/templates/superadmin.phtml
@@ -2,18 +2,18 @@
 /** @var \Magento\Backend\Block\Template $block */
 
 // Grafana
-$dashboardDemo = "http://localhost:5007/public-dashboards/5e9d33b0b2c9416a99322707fb87d415";
+//$dashboardDemo = "http://localhost:5007/public-dashboards/5e9d33b0b2c9416a99322707fb87d415";
 
 // Wopr Monitoring
 $dashboardWopr = "";
 
 // Metabase
-//$dashboardDemo = "http://localhost:5006/public/dashboard/f7925f52-9537-4141-9004-d39b87787649";
+$dashboardDemo = "http://localhost:5006/public/dashboard/f7925f52-9537-4141-9004-d39b87787649";
 ?>
 
 <!-- 1:1 aspect ratio -->
 <div class="embed-responsive embed-responsive-21by9">
-    <iframe class="embed-responsive-item" frameborder="0" src="<?= $dashboardWopr ?>"></iframe>
+    <iframe class="embed-responsive-item" frameborder="0" src="<?= $dashboardDemo ?>"></iframe>
 </div>
 
 
