Core: Bugfix abstract VaultService - Pipelines: Bugfix Configmap vault integration

--- a/Products/XPipe/V1/xpipe-v1-web-portal/src/app/code/Pipe/Dashboard/view/adminhtml/templates/superadmin.phtml
+++ b/Products/XPipe/V1/xpipe-v1-web-portal/src/app/code/Pipe/Dashboard/view/adminhtml/templates/superadmin.phtml
@@ -4,6 +4,8 @@
 // Grafana
 //$dashboardDemo = "http://localhost:5007/public-dashboards/5e9d33b0b2c9416a99322707fb87d415";
 
+//$dashboardDemo = "";
+
 // Wopr Monitoring
 $dashboardWopr = "";
 
