update landing page plans

--- a/Products/XPipe/V1/xpipe-v1-web-portal/src/app/code/Pipe/LandingPage/view/frontend/templates/landing_page.phtml
+++ b/Products/XPipe/V1/xpipe-v1-web-portal/src/app/code/Pipe/LandingPage/view/frontend/templates/landing_page.phtml
@@ -301,31 +301,35 @@ $enterprise = $block->getEnterpriseProduct();
                 </p>
                 <p class="plan-feature">
                     <ion-icon name="checkbox-outline"></ion-icon>
-                    &nbsp; Xdev Cloud
+                    &nbsp; Limited Cloud Dev Environment
                 </p>
                 <p class="plan-feature">
                     <ion-icon name="checkbox-outline"></ion-icon>
-                    &nbsp; ChatOps
+                    &nbsp; Trial Kubernetes Lab
                 </p>
+<!--                <p class="plan-feature">-->
+<!--                    <ion-icon name="checkbox-outline"></ion-icon>-->
+<!--                    &nbsp; ChatOps-->
+<!--                </p>-->
+<!--                <p class="plan-feature">-->
+<!--                    <ion-icon name="checkbox-outline"></ion-icon>-->
+<!--                    &nbsp; VoiceOps-->
+<!--                </p>-->
+<!--                <p class="plan-feature">-->
+<!--                    <ion-icon name="checkbox-outline"></ion-icon>-->
+<!--                    &nbsp; Docs-->
+<!--                </p>-->
+<!--                <p class="plan-feature">-->
+<!--                    <ion-icon name="checkbox-outline"></ion-icon>-->
+<!--                    &nbsp; Envs Setup-->
+<!--                </p>-->
+<!--                <p class="plan-feature">-->
+<!--                    <ion-icon name="checkbox-outline"></ion-icon>-->
+<!--                    &nbsp; Development Tools-->
+<!--                </p>-->
                 <p class="plan-feature">
                     <ion-icon name="checkbox-outline"></ion-icon>
-                    &nbsp; VoiceOps
-                </p>
-                <p class="plan-feature">
-                    <ion-icon name="checkbox-outline"></ion-icon>
-                    &nbsp; Docs
-                </p>
-                <p class="plan-feature">
-                    <ion-icon name="checkbox-outline"></ion-icon>
-                    &nbsp; Envs Setup
-                </p>
-                <p class="plan-feature">
-                    <ion-icon name="checkbox-outline"></ion-icon>
-                    &nbsp; Development Tools
-                </p>
-                <p class="plan-feature">
-                    <ion-icon name="checkbox-outline"></ion-icon>
-                    &nbsp; Up to 3 concurrent pipelines
+                    &nbsp; Limited pipelines
                 </p>
                 <p class="plan-feature">
                     <ion-icon name="checkbox-outline"></ion-icon>
@@ -360,15 +364,19 @@ $enterprise = $block->getEnterpriseProduct();
                 </p>
                 <p class="plan-feature">
                     <ion-icon name="checkbox-outline"></ion-icon>
-                    &nbsp; Dedicated Xdev Cloud
+                    &nbsp; Dedicated Cloud Dev Environment
                 </p>
                 <p class="plan-feature">
                     <ion-icon name="checkbox-outline"></ion-icon>
-                    &nbsp; Up to 10 concurrent pipelines
+                    &nbsp; Kubernetes Lab
                 </p>
                 <p class="plan-feature">
                     <ion-icon name="checkbox-outline"></ion-icon>
-                    &nbsp; Up to 30 users
+                    &nbsp; Up to 3 concurrent pipelines
+                </p>
+                <p class="plan-feature">
+                    <ion-icon name="checkbox-outline"></ion-icon>
+                    &nbsp; Up to 30 users, after &euro; 5 <em>/year</em> per user
                 </p>
                 <p class="plan-feature">
                     <ion-icon name="checkbox-outline"></ion-icon>
@@ -393,15 +401,23 @@ $enterprise = $block->getEnterpriseProduct();
 
                 <p class="plan-feature">
                     <ion-icon name="checkbox-outline"></ion-icon>
-                    &nbsp; IAM SAAS
+                    &nbsp; Dedicated Pipelines Templates
                 </p>
                 <p class="plan-feature">
                     <ion-icon name="checkbox-outline"></ion-icon>
-                    &nbsp; Up to 20 concurrent pipelines
+                    &nbsp; Docs
+                </p>
+<!--                <p class="plan-feature">-->
+<!--                    <ion-icon name="checkbox-outline"></ion-icon>-->
+<!--                    &nbsp; IAM SAAS-->
+<!--                </p>-->
+                <p class="plan-feature">
+                    <ion-icon name="checkbox-outline"></ion-icon>
+                    &nbsp; Up to custom concurrent pipelines limit
                 </p>
                 <p class="plan-feature">
                     <ion-icon name="checkbox-outline"></ion-icon>
-                    &nbsp; Up to 100 users
+                    &nbsp; Custom users limit
                 </p>
                 <p class="plan-feature">
                     <ion-icon name="checkbox-outline"></ion-icon>
