Todo: debug after login observer

--- a/Products/XPipe/V1/xpipe-v1-web-portal/src/app/code/Pipe/LandingPage/view/frontend/templates/landing_page.phtml
+++ b/Products/XPipe/V1/xpipe-v1-web-portal/src/app/code/Pipe/LandingPage/view/frontend/templates/landing_page.phtml
@@ -407,7 +407,11 @@ $enterprise = $block->getEnterpriseProduct();
                 </p>
                 <p class="plan-feature">
                     <ion-icon name="checkbox-outline"></ion-icon>
-                    &nbsp; Docs
+                    &nbsp; Advanced Real-Time Deployment
+                </p>
+                <p class="plan-feature">
+                    <ion-icon name="checkbox-outline"></ion-icon>
+                    &nbsp; IaaS & Monitoring plans
                 </p>
 <!--                <p class="plan-feature">-->
 <!--                    <ion-icon name="checkbox-outline"></ion-icon>-->
@@ -415,11 +419,7 @@ $enterprise = $block->getEnterpriseProduct();
 <!--                </p>-->
                 <p class="plan-feature">
                     <ion-icon name="checkbox-outline"></ion-icon>
-                    &nbsp; Up to custom concurrent pipelines limit
-                </p>
-                <p class="plan-feature">
-                    <ion-icon name="checkbox-outline"></ion-icon>
-                    &nbsp; Custom users limit
+                    &nbsp; Custom Users & Pipelines Limits
                 </p>
                 <p class="plan-feature">
                     <ion-icon name="checkbox-outline"></ion-icon>
