add groups service controll on user login event"

--- a/Products/XPipe/V1/xpipe-v1-web-portal/src/app/code/Pipe/Dashboard/view/adminhtml/layout/pipedashboard_dev_index.xml
+++ b/Products/XPipe/V1/xpipe-v1-web-portal/src/app/code/Pipe/Dashboard/view/adminhtml/layout/pipedashboard_dev_index.xml
@@ -4,7 +4,7 @@
 
     <body>
         <referenceContainer name="content">
-            <block class="Magento\Framework\View\Element\Template"
+            <block class="Pipe\Dashboard\Block\Adminhtml\Dashboard"
                    name="pipedashboard.dev"
                    template="Pipe_Dashboard::dev.phtml"/>
         </referenceContainer>
