--- a/Products/XPipe/V1/xpipe-v1-web-portal/src/app/code/Pipe/Dashboard/view/adminhtml/templates/superadmin.phtml
+++ b/Products/XPipe/V1/xpipe-v1-web-portal/src/app/code/Pipe/Dashboard/view/adminhtml/templates/superadmin.phtml
@@ -11,7 +11,23 @@ $dashboardWopr = "";
 
 // Metabase
 $dashboardDemo = "http://localhost:5006/public/dashboard/f7925f52-9537-4141-9004-d39b87787649";
+
+$block->consumeErrorMessages();
 ?>
+
+<?php foreach ($block->getMessages() as $message): ?>
+    <?php
+    $type = $message->getType(); // es: 'error', 'success'
+    $text = $message->getText();
+    $cssClass = "message message-{$type} {$type}";
+    ?>
+    <div class="<?= $cssClass ?>">
+        <div data-ui-id="messages-message-<?= $type ?>">
+            <?= $block->escapeHtml($text) ?>
+        </div>
+    </div>
+<?php endforeach; ?>
+
 
 <!-- 1:1 aspect ratio -->
 <div class="embed-responsive embed-responsive-21by9">
